# whisp-rs

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
.cargo/: config.toml
cmake/: cuda17.cmake
src/: audio.rs  clipboard.rs  config.rs  hotkey.rs  main.rs  output.rs  paste.rs  transcriber.rs  uinput.rs  util.rs
systemd/: README.md
systemd/user/: whisp.service
