[package]
name = "whisp"
version = "0.1.0"
edition = "2021"
description = "Push-to-talk speech-to-text using sherpa-onnx"

[dependencies]
cpal = "0.15"
evdev = "0.12"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
hf-hub = "0.4"
dirs = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
sherpa-rs = "0.6"
dialoguer = "0.11"
serde_json = "1"
ctrlc = "3"
